# 2025-DPT-SUMMER-INTERNSHIP

./: .gitignore  README.md
.env/cmake/: Dockerfile  README.md
.github/: pull_request_template.md
cproject/: .gitignore
cproject/dajeong/client/: Dockerfile  README.md  docker-compose.yml
cproject/dajeong/client/app/CClient/: CMakeLists.txt  Makefile  client.c  client.h  main.c
cproject/dajeong/client/app/PyClient/: client.py
cproject/dajeong/test1/: CMakeLists.txt  main.cpp
cproject/dajeong/test2/: CMakeLists.txt  mylib.cpp  mylib.hpp
cproject/mansoo/: CMakeLists.txt
cproject/mansoo/apps/test_using_lib/: CMakeLists.txt
cproject/mansoo/apps/test_using_lib/src/: main.cpp
cproject/mansoo/apps/test_using_log/: CMakeLists.txt
cproject/mansoo/apps/test_using_log/src/: main.cpp
cproject/mansoo/libs/test_lib/: CMakeLists.txt
cproject/mansoo/libs/test_lib/include/: test_lib.hpp
cproject/mansoo/libs/test_lib/src/: test_lib.cpp
pipeline/: .env  README.md  docker-compose.yml  requirements.txt
pipeline/airflow/dags/: analyze_kpi.py  insert_dummy_kpi.py  week1_summary.py
pipeline/airflow/scripts/: init-airflow.sh
pipeline/app/: Dockerfile  database.py  main.py  requirements.txt
pipeline/app/models/: __init__.py  kpi.py
pipeline/app/routers/: __init__.py  kpi.py
pipeline/app/schemas/: __init__.py  kpi.py
pipeline/app/services/: __init__.py  kpi_service.py
pipeline/data/: init.sql  sample_kpi_data.json
pipeline/docs/: day1_guide.md  day2_guide.md  day3_guide.md
pipeline/docs/introductions/: dajeong.md
